<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_backlog" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_theme" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_feedback" />
    </group>
</menu>